# teste_ergoview

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  setup.sh  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: project-ci.yml
docs/source/: conf.py  index.rst
src/ergoview/: __init__.py  appsettings.json  capture.py  configure.py  dados_monitoramento.json  filters.py  finger_gesture.py  main.py  minioService.py  score_rula.py  teste_aula_hoje.py  teste_calibracao.html  utils.py
tests/: test_capture.py
